# markitdown-altpack

./: LICENSE  README.md  pyproject.toml
src/markitdown_altpack/: __about__.py  __init__.py  _plugin.py
src/markitdown_altpack/converters/: __init__.py  _csv_converter.py  _doc_intel_alt_converter.py  _pymupdf_converter.py  _xlsx_alt_converter.py
